Successfully updated UI and linked with Backend

--- a/furnitureshop/pom.xml
+++ b/furnitureshop/pom.xml
@@ -10,9 +10,19 @@
 
 
 	<properties>
-	 <spring.version>4.3.6.RELEASE</spring.version>
+		<spring.version>4.3.6.RELEASE</spring.version>
+		
 	</properties>
+	
 	<dependencies>
+
+		<!-- spring-webmvc dependency -->
+		<dependency>
+			<groupId>com.intupercepts</groupId>
+			<artifactId>furnitureshop_backend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -28,7 +38,7 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-	
+
 		<!-- JSTL -->
 
 		<dependency>
@@ -36,7 +46,7 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-		
+
 
 
 	</dependencies>
